BoaUAT/src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Identifiaction__c</fullName>
        <formula>Name&amp;Make__c&amp;Model__c&amp;Year__c&amp;SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Identifiaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulldozer</fullName>
                </value>
                <value>
                    <fullName>Exgavator</fullName>
                </value>
                <value>
                    <fullName>Grapple</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Proccessor Head</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Swing Yarder</fullName>
                </value>
                <value>
                    <fullName>Tower Yarder</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Ute</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <label>Attachment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Arround</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cooling__c</fullName>
        <label>Cooling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crew__c</fullName>
        <label>Crew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Application__c</fullName>
        <label>Current Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forestry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust_Acc_Code__c</fullName>
        <label>Cust Acc Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <inlineHelpText>Next job will be scheduled on this date</inlineHelpText>
        <label>Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Num__c</fullName>
        <label>Engine</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hydraulic_System__c</fullName>
        <label>Hydraulic System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hydraulic__c</fullName>
        <label>Hydraulic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Current Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager/Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Number__c</fullName>
        <label>Plant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBookId__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceBookId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>image( Product2.Product_Image_URL__c, &quot;No Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Next_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Next Job?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_On__c</fullName>
        <label>Schedule On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days After</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
                <value>
                    <fullName>Next Month</fullName>
                </value>
                <value>
                    <fullName>Next Week</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Until__c</fullName>
        <inlineHelpText>Date until when the job can be automatically scheduled</inlineHelpText>
        <label>Schedule Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <label>Sub Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Asset_Scheduler</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Schedule_Next_Job__c,IF(OR(ISNULL(Schedule_Until__c),ISBLANK(TEXT(Schedule_On__c))),true,false),false)</errorConditionFormula>
        <errorMessage>When the Schedule Next Job is checked, then the &apos; Schedule Until &apos; and &apos; Schedule On &apos; field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schedule_Days_After</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(Days__c),TEXT(Schedule_On__c)=&apos;Days After&apos;)</errorConditionFormula>
        <errorDisplayField>Days__c</errorDisplayField>
        <errorMessage>When you will choose Days After then Days is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schedule_Not_Days_After</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL(Days__c)),TEXT(Schedule_On__c)!=&apos;Days After&apos;)</errorConditionFormula>
        <errorDisplayField>Days__c</errorDisplayField>
        <errorMessage>Do not give Days values. It&apos;s only mandatory for &quot;Days After&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schedule_Until_Day_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Schedule_Until__c&lt;TODAY()</errorConditionFormula>
        <errorDisplayField>Schedule_Until__c</errorDisplayField>
        <errorMessage>Schedule Until must be equal or greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISBLANK(Year__c)),IF(AND(LEN(Year__c)=4,isNumber(Year__c)),false,true),false)</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Enter the correct year format YYYY</errorMessage>
    </validationRules>
</CustomObject>